2015-02-23  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Add Anonymous XML check.

2015-02-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/its/gsad.xsl (current_page): New dummy template.

2015-02-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/classic/help.xsl: Fix typo.

2015-02-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0+beta7.

2015-02-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.0+beta6 release.

	* CHANGES: Updated.

2015-02-11  Matthew Mundell <matthew.mundell@greenbone.net>

	Add schedule periods to task creation.

	* src/gsad_omp.c (CHECK): Wrap in "do" loop so that it can be used
	safely as a lone "if" body when the "if" has an "else".
	(create_task_omp): Add SCHEDULE_PERIODS to MODIFY_TASK.
	(save_task_omp): Check schedule_periods.

	* src/html/classic/omp.xsl (task [details]): Display period limit.

2015-02-11  Matthew Mundell <matthew.mundell@greenbone.net>

	Add display and editing of task schedule periods.

	* src/gsad.c (init_validator): Add schedule_periods.

	* src/gsad_omp.c (save_task_omp): Add SCHEDULE_PERIODS to MODIFY_TASK.

	* src/html/classic/omp.xsl (task [details]): Display period limit.
	(html-edit-task-schedule): Add "Once" checkbox on schedule field.
	(html-edit-task-name): Increase width so schedule field stays on one
	line.

2015-02-09  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-aggregate-chart): Add new data
	modifiers qod_type_counts and percentage_counts.
	(js-secinfo-top-visualization, dashboard [secinfo]): Add NVTs by QoD
	and QoD type.

	* src/html/classic/omp.xsl (gsa:field-name): Add "QoD" and "QoD type".
	(info/nvt, html-nvt-table): Add QoD column.
	(nvt [details]): Show section "Vulnerability Detection Method" if
	QoD data is present. Add QoD percentage.